* Add `NAME optimization RTL` to client_api(). [jddalton]

* Change `notHTML` from `!('body' in doc)` to `!('body' in doc) || !('innerHTML' in root)` to correct the feature test for WebKit. [jddalton]

* Make compileSelector() use getAttribute() for ID selectors on non-html elements. [Diego Perini, jddalton]

* Fix Opera 9.25 bug by ensuring compileSelector() checks `e.nodeType==1` before attempting (get/has)Attribute and tweak `reUnnormalized` and `reValidator` regexps. [jddalton]

* Rewrite byName(), fix `NATIVE_GEBN` check and add feature tests for `BUGGY_GEBN_MATCH_ID`, `BUGGY_GEBN_WITH_ID_LENGTH`, and `BUGGY_GEBN_WITH_NON_INPUT`. [jddalton]

* Fix regression in `strSkipGroups` that stopped NWMatcher running in Chrome. [jddalton]

* Remove `cn.length` check in byClass() because non-html elements are handled elsewhere and rename `cn` to `n` for better compression with other `n` variables. [jddalton]

* Perform `e.type` before the `"form" in e` check to resolve `:enabled` and `:disabled` dynamic pseudos faster. [Diego Perini]

* Refactor attribute resolver in compileSelector() to avoid unneeded String#replace calls and other operations. [Diego Perini, jddalton]

* Define compile() and setQSA() as private methods in the `DEBUG API` section and ensure exposed byClass(), byName(), and byTag(), return array values. [Diego Perini, jddalton]

* Merge `compatMode` into `isQuirks` to reduce a variable. [Diego Perini] 

* Make all loops use `element` and `elements` variables for better compression and bump datestamp. [Diego Perini, jddalton]

* Replace `NATIVE_SLICE_PROTO` feature test with one from kangax's CFT. [Diego Perini, kangax]

* Avoid infinite loop for non html elements in byName(). [jddalton]

* Tweak byTag(), byName(), byClass(), select_qsa(), client_api(), and `reNameValue` to gain performance. [jddalton]

* Add `[name=...]` to the `RE_SIMPLE_SELECTOR` regexp. [jddalton]

* Ensure byName() returns an array of elements. [jddalton]
