@@ -1,3 +1,5 @@
+* Make non-html elements in byClass() and byName() use client_api() instead of select() and avoid an infinite loop in the `NAME optimization RTL` section of client_api(). [jddalton]
+
 * Add `NAME optimization RTL` to client_api(). [jddalton]
 
 * Change `notHTML` from `!('body' in doc)` to `!('body' in doc) || !('innerHTML' in root)` to correct the feature test for WebKit. [jddalton]
